🐛 fix: fixed layout on small screen mobile phone

--- a/src/pages/QuizPage/style.scss
+++ b/src/pages/QuizPage/style.scss
@@ -58,7 +58,7 @@
   .option-container {
     width: calc(100% - 172px);
     padding: 0 172px;
-    margin-top: 307px;
+    margin: 307px 0 0;
     list-style: none;
     overflow-x: hidden;
     overflow-y: auto;
