--- a/src/pages/ResultPage/style.scss
+++ b/src/pages/ResultPage/style.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   background: $backgroundColor url("../../assets/home_downpattern.png") no-repeat center bottom/100%;
 
   .fade-out-leave-active {
@@ -83,7 +83,7 @@
       position: relative;
       width: 666px;
       padding: 241px 0 185px;
-      margin-top: 224px;
+      margin: 224px 0 50px;
       background-color: #ebebeb;
       border-radius: 30px;
 
@@ -199,7 +199,8 @@
       align-items: center;
       justify-content: space-around;
       width: 100%;
-      margin-bottom: 88px;
+      margin: 0 0 88px;
+      z-index: 1;
 
       a {
         text-decoration: none;
